--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -41,15 +41,15 @@
 
 //Input colors
 @input-background-color: #F1F1F1;
-@input-border-color: #dadada;
+@input-border-color: #8c8f94;
 
 @text-color: #3c434a;
 @light-text-color: #3c3c3c;
-@border-color: #DEDEDE;
+@border-color: #dadada;
 
-@grey: #c6c6c6;
 @grey-lighter: #fafafa;
 @grey-light: #ededed;
+@grey: #c6c6c6;
 @grey-dark: #737373;
 @grey-darker: #696969;
 
