--- a/assets/css/wizard.less
+++ b/assets/css/wizard.less
@@ -55,14 +55,14 @@
 
   .burst-wizard-title {
     padding: @green-gap;
-    border-bottom: 1px solid @input-border-color;
+    border-bottom: 1px solid @border-color;
     display: flex;
 	font-size:17px;
 	font-weight:600;
     justify-content: space-between;
     align-content: center;
 	&.burst-section-content-notifications-header {
-	  border-bottom: 1px solid @input-border-color;
+	  border-bottom: 1px solid @border-color;
 	  h1{
 		font-weight:normal;
 	  }
@@ -620,7 +620,7 @@
 //  grid-template-columns: auto 0 !important;
 //}
 
-#burst-wizard, #burst-settings {
+.burst-wizard, #burst-settings {
   /* ----------- Icons ----------- */
 
   .burst-field .burst-icon, .burst-step .burst-icon {
@@ -879,23 +879,48 @@
   /* Placeholders */
 
   ::placeholder {
-	color: @grey-light;
-  }
-  ::placeholder/* Chrome/Opera/Safari */ {
-	color: @grey-light;
+	color: @grey-dark;
   }
 
   ::-moz-placeholder /* Firefox 19+ */ {
-	color: @grey-light;
+	color: @grey-dark;
   }
 
   :-ms-input-placeholder  /* IE 10+ */ {
-	color: @grey-light;
+	color: @grey-dark;
   }
   :-moz-placeholder /* Firefox 18- */ {
-	color: @grey-light;
+	color: @grey-dark;
   }
+	.select2-container--default .select2-selection--single .select2-selection__rendered{
+		color: @grey-dark;
+	}
 
+
+	.burst-experiment-settings-info_container{
+		display: flex;
+		margin: 6px 0;
+		font-size: 12px;
+		padding: 5px 7px;
+		border-radius: 5px;
+		//flex-wrap: wrap;
+		&.control{
+			background-color: lighten(@rsp-blue, 70%, relative);
+			border: 1px solid @rsp-blue;
+		}
+		&.variant{
+			background-color: lighten(@rsp-yellow, 63%, relative);
+			border: 1px solid @rsp-yellow;
+		}
+		a, p{
+			width: 100%;
+			margin: 0;
+		}
+		p{
+			font-weight: 500;
+			font-size: 14px;
+		}
+	}
 }
 
 .burst-multiple-field-button-footer {
@@ -1144,7 +1169,7 @@ a.button.burst-open-modal {
   .burst-panel-content {
 	display: none;
 	background-color: #fff;
-	border: 1px solid @input-border-color;
+	border: 1px solid @border-color;
 	border-top: 0;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
@@ -1163,7 +1188,7 @@ a.button.burst-open-modal {
 
   color: #383d41;
   background-color: #F2F2F2;
-  border: 1px solid @input-border-color;
+  border: 1px solid @border-color;
   padding: 10px 15px;
   border-radius: 0;
   margin: 0;
