--- a/assets/css/wizard.css
+++ b/assets/css/wizard.css
@@ -213,7 +213,7 @@
 }
 #burst-content-area .burst-section-content .burst-form .field-group .burst-label label {
   display: inline-block;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 5px 20px;
 }
 #burst-content-area .burst-section-content .burst-form .field-group .burst-label label:empty {
   padding: 0;
@@ -862,36 +862,6 @@
 .burst-wizard .select2-container--default .select2-selection--single .select2-selection__rendered,
 #burst-settings .select2-container--default .select2-selection--single .select2-selection__rendered {
   color: #737373;
-}
-.burst-wizard .burst-experiment-settings-info_container,
-#burst-settings .burst-experiment-settings-info_container {
-  display: flex;
-  margin: 6px 0;
-  font-size: 12px;
-  padding: 5px 7px;
-  border-radius: 5px;
-}
-.burst-wizard .burst-experiment-settings-info_container.control,
-#burst-settings .burst-experiment-settings-info_container.control {
-  background-color: #eaf8fe;
-  border: 1px solid #29b6f6;
-}
-.burst-wizard .burst-experiment-settings-info_container.variant,
-#burst-settings .burst-experiment-settings-info_container.variant {
-  background-color: #fefbf4;
-  border: 1px solid #f4bf3e;
-}
-.burst-wizard .burst-experiment-settings-info_container a,
-#burst-settings .burst-experiment-settings-info_container a,
-.burst-wizard .burst-experiment-settings-info_container p,
-#burst-settings .burst-experiment-settings-info_container p {
-  width: 100%;
-  margin: 0;
-}
-.burst-wizard .burst-experiment-settings-info_container p,
-#burst-settings .burst-experiment-settings-info_container p {
-  font-weight: 500;
-  font-size: 14px;
 }
 .burst-multiple-field-button-footer {
   display: flex;
