--- a/assets/css/wizard.less
+++ b/assets/css/wizard.less
@@ -246,7 +246,7 @@
 			  background-color: white;
 			  label{
 				  display: inline-block;
-				  padding: 20px 20px 0 20px;
+				  padding: 20px 20px 5px 20px;
 				  &:empty{
 					  padding: 0;
 					  display: none;
@@ -894,32 +894,6 @@
   }
 	.select2-container--default .select2-selection--single .select2-selection__rendered{
 		color: @grey-dark;
-	}
-
-
-	.burst-experiment-settings-info_container{
-		display: flex;
-		margin: 6px 0;
-		font-size: 12px;
-		padding: 5px 7px;
-		border-radius: 5px;
-		//flex-wrap: wrap;
-		&.control{
-			background-color: lighten(@rsp-blue, 70%, relative);
-			border: 1px solid @rsp-blue;
-		}
-		&.variant{
-			background-color: lighten(@rsp-yellow, 63%, relative);
-			border: 1px solid @rsp-yellow;
-		}
-		a, p{
-			width: 100%;
-			margin: 0;
-		}
-		p{
-			font-weight: 500;
-			font-size: 14px;
-		}
 	}
 }
 
